--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #Ignore the folder made by virtual enviroment creator
-/venv
+venv/
 
 #Ignore all files stored in the Archives and Database folders
 
